change thread poll -> StructuredTaskScope, enable preview futures