@@ -73,6 +73,9 @@ micronaut {
         deduceEnvironment = true
         optimizeNetty = true
     }
+    tasks.withType(JavaCompile).each {
+        it.options.compilerArgs.add('--enable-preview')
+    }
 }
 
 
